# playporter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_cli_smoke.py  run_cli_smoke_lang.py
src/crew/tools/: __init__.py  code_diff_tool.py  git_commit_tool.py  selenium_to_playwright_tool.py
src/playporter/: __init__.py  crew.py  main.py
src/playporter/config/: agents.yaml  tasks.yaml
src/playporter/tools/: playwright_runner_tool.py
tests/: test_cli.py
